Cleaned up some cells

--- a/loan-prediction.ipynb
+++ b/loan-prediction.ipynb
@@ -33,89 +33,7 @@
     " There are 13 variables in this data set:\n",
     "   8 categorical variables,\n",
     "   4 continuous variables, and\n",
-    "   1 variable to accommodate the loan ID.\n",
-    "\n",
-    "br\n",
-    "\n",
-    " The following is the structure of the data set.\n",
-    "\n",
-    "\n",
-    "table style\"width:100%\"\n",
-    "thead\n",
-    "tr\n",
-    "th style\"text-align:center; font-weight: bold; font-size:14px\"Variable Name/th\n",
-    "th style\"text-align:center; font-weight: bold; font-size:14px\"Description/th\n",
-    "th style\"text-align:center; font-weight: bold; font-size:14px\"Sample Data/th\n",
-    "/tr\n",
-    "/thead\n",
-    "tbody\n",
-    "tr\n",
-    "tdbLoan_ID/b/td\n",
-    "tdLoan reference number br (unique ID)/td\n",
-    "tdLP001002; LP001003; .../td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbGender/b/td\n",
-    "tdApplicant gender br (Male or Female)/td\n",
-    "tdMale; Female/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbMarried/b/td\n",
-    "tdApplicant marital status br (Married or not married)/td\n",
-    "tdMarried; Not Married/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbDependents/b/td\n",
-    "tdNumber of family members/td\n",
-    "td0; 1; 2; 3/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbEducation/b/td\n",
-    "tdApplicant education/qualification br (graduate or not graduate)/td\n",
-    "tdGraduate; Under Graduate/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbSelf_Employed/b/td\n",
-    "tdApplicant employment status br (yes for self-employed, no for employed/others)/td\n",
-    "tdYes; No/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbApplicantIncome/b/td\n",
-    "tdApplicant's monthly salary/income/td\n",
-    "td5849; 4583; .../td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbCoapplicantIncome/b/td\n",
-    "tdAdditional applicant's monthly salary/income/td\n",
-    "td1508; 2358; .../td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbLoanAmount/b/td\n",
-    "tdLoan amount/td\n",
-    "td128; 66; .../td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbLoan_Amount_Term/b/td\n",
-    "tdThe loan's repayment period (in days)/td\n",
-    "td360; 120; .../td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbCredit_History/b/td\n",
-    "tdRecords of previous credit history br (0: bad credit history, 1: good credit history)/td\n",
-    "td0; 1/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbProperty_Area/b/td\n",
-    "tdThe location of property br (Rural/Semiurban/Urban)/td\n",
-    "tdRural; Semiurban; Urban/td\n",
-    "/tr\n",
-    "tr\n",
-    "tdbLoan_Status/b/td\n",
-    "tdStatus of loan br (Y: accepted, N: not accepted)/td\n",
-    "tdY; N/td\n",
-    "/tr\n",
-    "/tbody\n",
-    "/table"
+    "   1 variable to accommodate the loan ID.\n"
    ]
   },
   {
